--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "esbuild": "^0.17.4",
     "eslint": "^8.32.0",
     "lint-staged": "^13.1.0",
+    "moment": "^2.30.1",
     "prettier": "^2.8.3",
     "prisma": "^4.9.0",
     "simple-git-hooks": "^2.8.1",
@@ -42,7 +43,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nanoid": "^5.0.6"
   },
   "lint-staged": {
     "*.ts": [
