--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "db:update": "prisma migrate dev"
   },
   "devDependencies": {
+    "@types/config": "^3.3.4",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
     "@types/swagger-ui-express": "^4.1.3",
@@ -39,10 +42,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "config": "^3.3.11",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.6"
   },
